--- a/public/views/driver-dashboard.html
+++ b/public/views/driver-dashboard.html
@@ -479,7 +479,7 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <h5><i class="fas fa-car"></i> DC Car Booking</h5>
                     <p class="mb-1">Hệ thống đặt xe trực tuyến hàng đầu Việt Nam</p>
-                    <img src="/images/bocongthuong.png" alt="Bộ Công Thương" style="height:40px;">
+                    <img src="/uploads/bocongthuong/Logo-thong-bao-mau-do-1.png" alt="Bộ Công Thương" style="height: 150px;">
                 </div>
                 <div class="col-md-4 mb-3 mb-md-0">
                     <h6>Liên hệ</h6>
